# phecoder

./: .gitignore  ICDDataPreparationREADME.md  ICDDataPreparationReadme.md  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  publish-pypi.yml  publish-testpypi.yml
docs/: guide.md  index.md  review.md
docs/api/: phecoder.md  review.md  utils.md
example_data/: icd_info.parquet
notebooks/: figures.ipynb  hello-world.ipynb  phecode_mental.xlsm  review_and_export.ipynb
notebooks/.ipynb_checkpoints/: hello-world-checkpoint.ipynb
phecoder/: __init__.py  _embed.py  _ensemble.py  _eval.py  _evaluate.py  _review.py  _sim.py  _similarity.py  _util.py  phecoder.py  utils.py
phecoder/data/: icd_info.parquet
scripts/: build_icd_sets_from_validation.py  download_models.py  embeddings_phecodeX.py  preprocess_phecodeX.py  similarity_case_studies.py  similarity_phecodeX.py  update_phecode_icd_pairs.py
validation/alcohol_abuse_and_dependence/: alcohol_abuse_and_dependence.xlsx  alcohol_abuse_and_dependence_full.parquet
validation/bipolar_disorder/: bipolar_disorder.xlsx  bipolar_disorder_full.parquet
validation/eating_disorders/: eating_disorders.xlsx  eating_disorders_full.parquet
validation/opioid_use_disorders/: opioid_use_disorders.xlsx  opioid_use_disorders_full.parquet
validation/personality_disorders/: personality_disorders.xlsx  personality_disorders_full.parquet
validation/schizophrenia/: schizophrenia.xlsx  schizophrenia_full.parquet
