[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "phecoder"
version = "0.0.0"
readme = "README.md"
description = "Semantic ICD code ranking for efficient Phecode curation."
authors = ["Jamie Bennett, David Burstein, Panos Roussos"]
license = "Proprietary"

keywords = [
    "Phenotyping",
    "Phecodes",
    "ICD-9",
    "ICD-10",
    "Transformer Networks",
    "Semantic search",
    "PyTorch",
    "NLP",
    "Deep learning",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

packages = [
    { include = "phecoder"}
]

[tool.poetry.urls]
"Homepage" = "https://github.com/03bennej/phecoder.git"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
sentence-transformers = "^5.1.0"
pandas = "^2.3.2"
ipykernel = "^6.30.1"
matplotlib = "^3.10.6"
pyarrow = "^21.0.0"
openpyxl = "^3.1.5"
plotly = "^6.3.0"
nbformat = "^5.10.4"
seaborn = "^0.13.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
flake8 = "^7.3.0"
flake8-bugbear = "^24.12.12"
pytest = "^8.4.2"
tox = "^4.30.2"
pytest-cov = "^7.0.0"
black = "^25.9.0"

[tool.pytest.ini_options]
addopts = "--cov=phecoder --cov-report xml --cov-append"
testpaths = [
    "tests"
]