[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "phecoder"
version = "0.0.0"
readme = "README.md"
description = "Semantic retrieval for auditing and expanding ICD-based phenotypes in EHR biobanks."
authors = ["Jamie Bennett, Sonali Gupta, David Burstein"]
license = "Apache-2.0"

keywords = [
    "Phenotyping",
    "Phecodes",
    "ICD-9",
    "ICD-10",
    "Transformer Networks",
    "Semantic search",
    "PyTorch",
    "NLP",
    "Deep learning",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

packages = [
    { include = "phecoder"}
]

[tool.poetry.urls]
"Homepage" = "https://github.com/03bennej/phecoder.git"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
sentence-transformers = "^5.1.0"
pandas = "^2.3.2"
ipykernel = "^6.30.1"
pyarrow = "^21.0.0"
openpyxl = "^3.1.5"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
flake8 = "^7.3.0"
flake8-bugbear = "^24.12.12"
pytest = "^8.4.2"
tox = "^4.30.2"
pytest-cov = "^7.0.0"
black = "^25.9.0"

[tool.pytest.ini_options]
addopts = "--cov=phecoder --cov-report xml --cov-append"
testpaths = [
    "tests"
]